# binance_bot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  BACKTEST_ISSUES_FIXED.md  CLAUDE.md  CRITICAL_FIXES_APPLIED.md  FINAL_FIXES_SUMMARY.md  FINAL_FIX_SUMMARY.md  FIXES_APPLIED.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LIVE_TRADING_TROUBLESHOOTING.md  Makefile  OPTIMIZATION_FIXES.md  OPTIMIZATION_FIXES_SUMMARY.md  OPTIMIZATION_SUMMARY.md  QUICKSTART_TRADING.md  README.md  TESTNET_FIX_SUMMARY.md  UNDERSTANDING_OPTIMIZATION_RESULTS.md  debug_backtest.py  docker-compose.yml  pyproject.toml  ruff.toml  run_optimization.py  run_optimization_fixed.py  run_optimization_one_run.py  run_optimization_overnight.py  test_fixes.py  test_live.sh  test_optimization.py  test_optimization_fixes.py  test_optimizer_output.py  test_warmup.py  test_warmup_fixes.py  test_warmup_integration.py  verify_fixes.py
.claude/: settings.local.json
docker/: Dockerfile  README.md
docs/: CODE_REVIEW_REPORT.md  CRITICAL_FIXES_SUMMARY.md  DATA_PIPELINE_GUIDE.md  DATA_WARMUP_GUIDE.md  FIXES_IMPLEMENTED_2025-10-21.md  FIX_TODO.md  IMPLEMENTATION_COMPLETE.md  KILL_SWITCH_GUIDE.md  OPERATIONS.md  OPERATIONS_SUMMARY.md  OPTIMIZATION_FIXES_SUMMARY.md  OPTIMIZATION_IMPLEMENTATION_SUMMARY.md  OPTIMIZATION_SUMMARY.md  ORDER_ID_FIXES_SUMMARY.md  PARAMETER_OPTIMIZATION_GUIDE.md  PERFORMANCE_OPTIMIZATIONS.md  QUICKSTART_TRADING.md  QUICK_START_GUIDE.md  RUNNER_API_REFERENCE.md  STRATEGY_PARAMETER_RESEARCH.md  TRADINGNODE_INTEGRATION.md  WARMUP_CRASH_FIXES.md  WARMUP_IMPLEMENTATION.md  operational_controls_integration.md
naut-hedgegrid/: .editorconfig  Makefile  README.md  mypy.ini  pyproject.toml  ruff.toml
naut-hedgegrid/configs/backtest/: btcusdt_mark_trades_funding.yaml
naut-hedgegrid/configs/strategies/: hedge_grid_v1.yaml
naut-hedgegrid/configs/venues/: binance_futures.yaml
naut-hedgegrid/src/naut_hedgegrid/: __init__.py
naut-hedgegrid/src/naut_hedgegrid/config/: base.py  strategy.py  venue.py
naut-hedgegrid/src/naut_hedgegrid/domain/: __init__.py  types.py
naut-hedgegrid/src/naut_hedgegrid/exchange/: __init__.py
naut-hedgegrid/src/naut_hedgegrid/metrics/: report.py
naut-hedgegrid/src/naut_hedgegrid/runners/: __init__.py  __main__.py
naut-hedgegrid/src/naut_hedgegrid/strategies/: __init__.py
naut-hedgegrid/src/naut_hedgegrid/strategies/hedge_grid_v1/: __init__.py  config.py
naut-hedgegrid/src/naut_hedgegrid/strategy/: __init__.py  funding_guard.py  policy.py
naut-hedgegrid/src/naut_hedgegrid/utils/: __init__.py
naut-hedgegrid/tests/: __init__.py
naut-hedgegrid/tests/config/: test_config_loading.py
naut-hedgegrid/tests/domain/: test_types.py
naut-hedgegrid/tests/exchange/: __init__.py
naut-hedgegrid/tests/strategy/: README_SMOKE_TESTS.md  TEST_SUMMARY.md  test_detector.py  test_funding_guard.py  test_grid.py  test_order_sync.py  test_strategy_smoke.py
naut-hedgegrid/tests/utils/: test_yamlio.py
(+180 files in other folders)
