[project]
name = "naut-hedgegrid"
version = "0.1.0"
description = "Hedging grid trading system built on NautilusTrader"
readme = "README.md"
authors = [
    { name = "Giovanni", email = "giopampax@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "nautilus-trader",
    "pydantic>=2",
    "pyyaml",
    "rich",
    "typer",
    "pandas",
    "polars",
    "pyarrow",
    "numpy",
    "prometheus-client>=0.20.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "python-dotenv",
    "tenacity",
    "tardis-client>=2.0.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "hypothesis",
    "ruff",
    "mypy",
    "types-PyYAML",
    "pre-commit",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --strict-markers"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"
