[project]
name = "naut-hedgegrid"
version = "0.1.0"
description = "Hedging grid trading system built on NautilusTrader"
readme = "README.md"
authors = [
    { name = "Giovanni", email = "giopampax@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "nautilus-trader",
    "pydantic>=2",
    "pyyaml",
    "rich",
    "typer",
    "pandas",
    "polars",
    "pyarrow",
    "numpy",
    "prometheus-client",
    "fastapi",
    "uvicorn",
    "python-dotenv",
    "tenacity",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "hypothesis",
    "ruff",
    "mypy",
    "types-PyYAML",
    "pre-commit",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --strict-markers"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"
